# cuttle

./: Cargo.toml  README.md
benches/: inference_benchmark.rs
examples/: simple_inference.rs  static_tensor_demo.rs
model/: config.json  tokenizer.json
src/: downloader.rs  error.rs  inference.rs  lib.rs  main.rs  model.rs  tensor.rs  tokenizer.rs  utils.rs
