[package]
name = "cuttle"
version = "0.1.1"
edition = "2024"
authors = ["passchaos <greedwolf.dss@gmail.com>"]
description = "A large language model inference engine in Rust"
license = "MIT"

[dependencies]
vectra = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# File I/O and path handling
tokio = { version = "1.0", features = ["full"] }
byteorder = "1.4"
memmap2 = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Command line argument parsing
clap = { version = "4.0", features = ["derive"] }

# Mathematical functions
libm = "0.2"

# Parallel computing
rayon = "1.7"

# HTTP client for model downloading
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
